--- a/data/docker-compose.yml
+++ b/data/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:13-alpine
     ports:
       - '5432:5432'
     volumes:
