--- a/data/docker-compose.yml
+++ b/data/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./data:/lib/postgres
+      - ./data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=app
       - POSTGRES_USER=app
